@@ -1,11 +1,11 @@
 package a_HowToStart;
 
 import javafx.application.Application;
-import javafx.scene.Scene;
-import javafx.scene.layout.HBox;
 import javafx.stage.Stage;
 
-public class main2 extends Application{
+// --add-modules=javafx.controls,javafx.fxml
+
+public class Main1 extends Application {
 	public static void main(String[] args) {
 		launch(args);
 	}
@@ -13,8 +13,7 @@ public class main2 extends Application{
 	@Override
 	public void start(Stage arg0) throws Exception {
 		// TODO Auto-generated method stub
-		HBox hbox = new HBox();
-		arg0.setScene(new Scene(hbox, 500, 300));
+		arg0.setTitle("연습코드");
 		arg0.show();
 	}
 }
